WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143615
[iOS] When entering optimized fullscreen, standard fullscreen view should exit.
https://bugs.webkit.org/show_bug.cgi?id=143615
Summary
[iOS] When entering optimized fullscreen, standard fullscreen view should exit.
Jer Noble
Reported
2015-04-10 12:32:36 PDT
[iOS] When entering optimized fullscreen, standard fullscreen view should exit.
Attachments
Patch
(27.16 KB, patch)
2015-04-10 12:46 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-04-10 12:46:48 PDT
Created
attachment 250527
[details]
Patch
WebKit Commit Bot
Comment 2
2015-04-10 12:49:34 PDT
Attachment 250527
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:995: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:1209: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2015-04-13 16:42:17 PDT
Comment on
attachment 250527
[details]
Patch Clearing flags on attachment: 250527 Committed
r182766
: <
http://trac.webkit.org/changeset/182766
>
WebKit Commit Bot
Comment 4
2015-04-13 16:42:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug